<resources>
    <string name="app_name">My Application</string>
    <string name="button">Button</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="creer_un_compte">Créer un compte</string>
    <string name="se_connecter">Se connecter</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="home_activity_title">Accueil</string>
    <string-array name="posts">
        <item>Post1</item>
        <item>Post2</item>
        <item>Post3</item>
        <item>Post4</item>
    </string-array>

</resources>